# oarepo-model-builder-multilingual

./: .gitignore  2  MANIFEST.in  README.md  format.sh  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  main.yml  manual.yaml  push.yaml
.venv-tests/: pyvenv.cfg
oarepo_model_builder_multilingual/: faker.py  i18n.json5  multilingual_jsonschema.json5  multilingual_settings.json5  ui_jsonschema.json5
oarepo_model_builder_multilingual/builders/: mult_setup_cfg.py
oarepo_model_builder_multilingual/builtin_models/: i18n.json
oarepo_model_builder_multilingual/datatypes/: __init__.py  multilings.py
oarepo_model_builder_multilingual/datatypes/components/: __init__.py
oarepo_model_builder_multilingual/datatypes/components/facets/: __init__.py  i18n.py
oarepo_model_builder_multilingual/datatypes/components/mapping/: __init__.py  field.py  multi.py
oarepo_model_builder_multilingual/datatypes/components/marshmallow/: __init__.py  i18n.py  ui_i18n.py
oarepo_model_builder_multilingual/datatypes/components/model/: __init__.py  multilingual_dumper.py
oarepo_model_builder_multilingual/datatypes/components/multilingual/: field.py
oarepo_model_builder_multilingual/invenio/: __init__.py  invenio_multilingual_poetry.py  invenio_record_dumper_multilingual.py  invenio_record_multilingual.py  invenio_record_multilingual_facets.py  invenio_schema_i18n.py  invenio_schema_multilingual.py  invenio_search_multilingual.py  invenio_ui_schema_i18n.py  invenio_ui_schema_multilingual.py
oarepo_model_builder_multilingual/invenio/templates/: invenio_record_dumper_multilingual.py.jinja2  invenio_record_multilingual.py.jinja2  invenio_record_search_multilingual.py.jinja2  invenio_schema_i18n.py.jinja2  invenio_schema_multilingual.py.jinja2  invenio_ui_schema_i18n.py.jinja2  invenio_ui_schema_multilingual.py.jinja2
oarepo_model_builder_multilingual/model_preprocessors/: multilingual.py
oarepo_model_builder_multilingual/property_preprocessors/: i18nStr.py  i18n_marshmallow_class_generator.py  multilingual.py
oarepo_model_builder_multilingual/schema/: __init__.py
oarepo_model_builder_multilingual/utils/: supported_langs.py
oarepo_model_builder_multilingual/validation/: __init__.py
tests/: conftest.py  i18nStr.py  model.json5  multilingual_schema.py  test_build_from_entrypoints.py  test_cfg.py  test_custom_value.py  test_dumper.py  test_helper.py  test_i18nStr.py  test_marshmallow_ui.py  test_multi_facets.py  test_runtime.py  test_schema.py  test_settings.py  test_ui.py
tests/example-model/: setup.cfg
tests/example-model/data/: sample_data.yaml
tests/example-model/oarepo_model_builder_multilingual/: config.py
tests/example-model/oarepo_model_builder_multilingual/models/: records.json
tests/example-model/oarepo_model_builder_multilingual/records/: api.py  models.py
tests/example-model/oarepo_model_builder_multilingual/records/dumpers/: dumper.py  edtf.py  multilingual.py
tests/example-model/oarepo_model_builder_multilingual/records/mappings/os-v2/oarepo_model_builder_multilingual/: oarepo_model_builder_multilingual-1.0.0.json
tests/example-model/oarepo_model_builder_multilingual/resources/records/: config.py  ui.py
tests/example-model/oarepo_model_builder_multilingual/services/records/: config.py  schema.py  search.py  ui_schema.py
tests/example-model/oarepo_model_builder_multilingual/views/records/: api.py
tests/example-model/tests/: conftest.py  test_resource.py  test_service.py
tests/test_app/: pyproject.toml  setup.cfg
tests/test_app/data/: sample_data.yaml
tests/test_app/model/: cli.py  config.py  ext.py  proxies.py  views.py
tests/test_app/model/models/: model.json
tests/test_app/model/records/: api.py  dumper.py  models.py  multilingual_dumper.py
tests/test_app/model/records/jsonschemas/: model-1.0.0.json
tests/test_app/model/records/mappings/os-v2/model/: model-1.0.0.json
tests/test_app/model/resources/records/: config.py  resource.py  ui.py
tests/test_app/model/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
tests/test_app/oarepo_model_builder_multilingual/: ext.py  proxies.py
tests/test_app/oarepo_model_builder_multilingual/models/: records.json
tests/test_app/oarepo_model_builder_multilingual/records/: multilingual_dumper.py
tests/test_app/oarepo_model_builder_multilingual/records/dumpers/: dumper.py
tests/test_app/oarepo_model_builder_multilingual/records/jsonschemas/: oarepo_model_builder_multilingual-1.0.0.json
tests/test_app/oarepo_model_builder_multilingual/resources/records/: resource.py
tests/test_app/oarepo_model_builder_multilingual/services/records/: config.py  facets.py  permissions.py  schema.py  service.py  ui_schema.py
tests/test_app/oarepo_model_builder_multilingual/views/records/: app.py
tests/test_app/tests/: conftest.py  test_resource.py  test_service.py  utils.py
