[tool.poetry]
name = "oarepo-model-builder-multilingual"
version = "0.0.1"
description = ""
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>"]
readme = "README.md"

packages = [
    { include = "oarepo_model_builder_multilingual" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
json5 = { version = "^0.9.6", optional = true }
libcst = "^0.3.19"
click = ">=7.1"
tomlkit = "^0.7.2"
jsonpointer = "^2.2"
PyYAML = { version = "^6.0", optional = true }
Jinja2 = "^3.0.3"
isort = "^5.10.1"
langcodes = ">=3.3.0"
oarepo-model-builder = "^0.9.2"
deepmerge = "^0.3.0"
marshmallow = "^3.14.1"



[tool.poetry.extras]
json5 = ["json5"]
pyyaml = ["pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

