[metadata]
name = oarepo-model-builder-multilingual
version = 2.0.0
description =
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>"]
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=2.0.0
    langcodes>=3.3.0

packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.packages.find]
exclude = example_model

[options.entry_points]

oarepo_model_builder.property_preprocessors.model =
    700-multilingual = oarepo_model_builder_multilingual.property_preprocessors.multilingual:MultilangPreprocessor
    1001-i18n = oarepo_model_builder_multilingual.property_preprocessors.i18nStr:I18nStrPreprocessor

oarepo.models =
    i18n = oarepo_model_builder_multilingual.builtin_models:i18n.json

oarepo_model_builder.builders.model = 
    0301-invenio_record_search_options_multilang = oarepo_model_builder_multilingual.invenio.invenio_search_multilingual:InvenioRecordSearchOptionsBuilderMultilingual
    380-invenio_record_dumper = oarepo_model_builder_multilingual.invenio.invenio_record_dumper_multilingual:InvenioRecordMultilingualDumperBuilder
    0901-invenio_multiligual_poetry = oarepo_model_builder_multilingual.invenio.invenio_multilingual_poetry:InvenioMultilingualPoetryBuilder

oarepo_model_builder.validation =
    multilingual-validation = oarepo_model_builder_multilingual.validation:validators


oarepo_model_builder.model_preprocessors.model =
    30-multilingual = oarepo_model_builder_multilingual.model_preprocessors.multilingual:MultilingualModelPreprocessor

oarepo_model_builder.templates =
    100-multilingual_templates = oarepo_model_builder_multilingual.invenio

oarepo.model_schemas =
    es-strings = oarepo_model_builder_multilingual:multilingual_jsonschema.json5
    mult-settings = oarepo_model_builder_multilingual:multilingual_settings.json5
    i18n = oarepo_model_builder_multilingual:i18n.json5
    ui = oarepo_model_builder_multilingual:ui_jsonschema.json5

oarepo_model_builder.sample_data_providers =
    multilingual = oarepo_model_builder_multilingual.faker:multilingual_sample_provider

oarepo_model_builder.datatypes =
    0200-multilingual-datatypes = oarepo_model_builder_multilingual.datatypes:MULTILINGUAL_TYPES

[options.extras_require]
tests =
    pytest-invenio>=1.4.11
    invenio-records-resources>=1.0.3


[tool:pytest]
testpaths =
    tests
