[metadata]
name = oarepo-model-builder-multilingual
version = 3.0.11
description =
authors = ["Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>"]
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=2.0.0
    langcodes>=3.3.0


packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.packages.find]
exclude = example_model

[options.entry_points]


oarepo.models =
    i18n = oarepo_model_builder_multilingual.builtin_models:i18n.json

oarepo_model_builder.builders.record =
    300-multilingual_record = oarepo_model_builder_multilingual.invenio.invenio_record_multilingual:InvenioRecordMultilingualBuilder
    380-invenio_record_dumper = oarepo_model_builder_multilingual.invenio.invenio_record_dumper_multilingual:InvenioRecordMultilingualDumperBuilder
    0100-mult-setup-cfg = oarepo_model_builder_multilingual.builders.mult_setup_cfg:MultSetupCfgBuilder


oarepo_model_builder.validation.settings =
    languages-settings = oarepo_model_builder_multilingual.validation:LanguagesSettingsSchema


oarepo_model_builder.templates =
    100-multilingual_templates = oarepo_model_builder_multilingual.invenio

oarepo.model_schemas =
    es-strings = oarepo_model_builder_multilingual:multilingual_jsonschema.json5
    mult-settings = oarepo_model_builder_multilingual:multilingual_settings.json5
    i18n = oarepo_model_builder_multilingual:i18n.json5
    ui = oarepo_model_builder_multilingual:ui_jsonschema.json5

oarepo_model_builder.sample_data_providers =
    multilingual = oarepo_model_builder_multilingual.faker:multilingual_sample_provider

oarepo_model_builder.datatypes =
    0200-multilingual-datatypes = oarepo_model_builder_multilingual.datatypes:MULTILINGUAL_TYPES
oarepo_model_builder.datatypes.components =
    0100-default-multilingual-datatypes = oarepo_model_builder_multilingual.datatypes.components:DEFAULT_COMPONENTS


[options.extras_require]
tests =
    pytest
    # TODO: should not install the following to the same virtual env - model builder and runtime virtualenvs should be different
    # pytest-invenio>=1.4.11
    # invenio-records-resources>=1.0.3

[tool:pytest]
testpaths =
    tests
