

[metadata]
name = oarepo-model-builder-multilingual
version = 1.0.0
description = Repository model for oarepo-model-builder-multilingual
authors = 


[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.0.0
    deepmerge>=1.1.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.ext:Oarepo_model_builder_multilingualExt
invenio_base.apps = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.ext:Oarepo_model_builder_multilingualExt
invenio_db.alembic = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual:alembic
invenio_db.models = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.records.models
invenio_base.api_blueprints = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.views.records.api:create_api_blueprint
invenio_base.blueprints = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.views.records.app:create_app_blueprint
invenio_search.mappings = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.records.mappings
invenio_jsonschemas.schemas = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.records.jsonschemas
oarepo.models = oarepo_model_builder_multilingual = oarepo_model_builder_multilingual.models:records.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
