

[metadata]
name = model
version = 1.0.0
description = A sample application for model
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
    deepmerge>=1.1.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = model = model.ext:ModelExt
invenio_base.apps = model = model.ext:ModelExt
invenio_db.alembic = model = model:alembic
invenio_db.models = model = model.records.models
invenio_base.api_blueprints = model = model.views:create_blueprint_from_app_model
invenio_base.blueprints = model = model.views:create_blueprint_from_app_modelExt
invenio_search.mappings = model = model.records.mappings
invenio_jsonschemas.schemas = model = model.records.jsonschemas
oarepo.models = model = model.models:model.json
flask.commands = model = model.cli:group


[options.extras_require]
tests =
    invenio-app>=1.3.3
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.11
    invenio_search[opensearch2]>=2.0.0
    Werkzeug<2.2.0
    Flask-Login>=0.6.1
    pyyaml>=6.0
    requests>=2.28.1
